--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ input_data/p1/fastq/*.fq
 # Add any other files or directories you want to exclude
 # Example: Ignore all .zip files in the fastq directory
 input_data/p1/fastq/*.zip
+.Rproj.user
